fix: 아티스트 페이징 및 검색 API 개선, 팔로워 수 포함